@@ -4,6 +4,9 @@ Changelog
 2.0a1 (unreleased)
 -------------------
 
+- Get rid of the '.html' on the ids (closes `#8`_).
+  [hvelarde]
+
 - Update package dependencies.
   [hvelarde]
 
@@ -65,4 +68,4 @@ Changelog
 
 .. _`#2`: https://github.com/collective/collective.googlenews/issues/2
 .. _`#3`: https://github.com/collective/collective.googlenews/issues/3
-
+.. _`#8`: https://github.com/collective/collective.googlenews/issues/8
